ci: autogen changelog

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,3 +23,6 @@ jobs:
 
       - name: Run tests
         run: npm test
+
+      - name: generate-changelog-action
+        uses: ScottBrenner/generate-changelog-action@v1.3.3
